crates/providers/openai/tests/snapshots/translate__response_format_json_schema.snap
---
source: crates/providers/openai/tests/translate.rs
expression: "&body"
---
{
  "model": "gpt-4o",
  "messages": [
    {
      "role": "user",
      "content": "Give me a JSON object."
    }
  ],
  "temperature": 1.0,
  "max_tokens": 1024,
  "response_format": {
    "type": "json_schema",
    "json_schema": {
      "name": "answer",
      "schema": {
        "properties": {
          "value": {
            "type": "string"
          }
        },
        "required": [
          "value"
        ],
        "type": "object"
      }
    }
  }
}
