crates/providers/openai/tests/snapshots/translate__text_only_single_turn.snap
---
source: crates/providers/openai/tests/translate.rs
expression: "&body"
---
{
  "model": "gpt-4o",
  "messages": [
    {
      "role": "user",
      "content": "What is 2+2?"
    }
  ],
  "temperature": 1.0,
  "max_tokens": 1024
}
